--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-async-handler": "^1.1.4",
     "helmet": "^4.4.1",
     "morgan": "^1.9.1",
+    "per-env": "^1.0.2",
     "pg": "^8.5.1",
     "sequelize": "^5.22.4",
     "sequelize-cli": "^5.5.1"
