--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,14 @@
   },
   "devDependencies": {
     "dotenv-cli": "^4.0.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
