--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,10 @@
     "start": "per-env",
     "start:development": "nodemon -r dotenv/config ./bin/www",
     "start:production": "node ./bin/www",
-    "test": "jest"
+    "pretest": "cross-env NODE_ENV=test npm run migrate:reset",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
+    "migrate": "npx dotenv sequelize-cli db:migrate",
+    "migrate:reset": "npx dotenv sequelize db:migrate:undo:all && npm run migrate"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -24,9 +27,11 @@
     "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "dotenv-cli": "^4.0.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "sqlite3": "^5.0.2",
     "supertest": "^6.1.3"
   },
   "jest": {
