--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "fetch-mock": "^9.11.0",
+    "node-fetch": "^2.6.1",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.4"
   },
