--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start": "per-env",
     "start:development": "nodemon -r dotenv/config ./bin/www",
     "start:production": "node ./bin/www",
-    "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000 --watch",
     "migrate": "npx dotenv sequelize-cli db:migrate",
     "migrate:reset": "npx dotenv sequelize db:migrate:undo:all && npm run migrate"
   },
