--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "dotenv-cli": "^4.0.0",
+    "eslint": "^7.24.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "sqlite3": "^5.0.2",
