--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "cross-env": "^7.0.3",
     "dotenv-cli": "^4.0.0",
     "eslint": "^7.24.0",
+    "eslint-plugin-jest": "^24.3.4",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "sqlite3": "^5.0.2",
